src/objects/Apttus_Config2__Incentive__c.object
<CustomObject>
    <description>Represents an incentive associated with one or more products</description>
    <fields>
        <fullName>APTS_Calculate_Rebate_On__c</fullName>
        <label>Calculate Rebate On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JDE Invoice</fullName>
                    <default>true</default>
                    <label>JDE Invoice</label>
                </value>
                <value>
                    <fullName>JDE Invoice and Sellout Data</fullName>
                </value>
                <value>
                    <fullName>Sellout Data</fullName>
                    <isActive>false</isActive>
                    <label>Sellout Data</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Concept__c</fullName>
        <description>Used for classification of the rebate program.</description>
        <label>Concept</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_1</fullName>
                    <label>TPR</label>
                </value>
                <value>
                    <fullName>SAP_2</fullName>
                    <label>Price Restitution (PPR)</label>
                </value>
                <value>
                    <fullName>SAP_3</fullName>
                    <label>Logistics (Efficiency)</label>
                </value>
                <value>
                    <fullName>SAP_4</fullName>
                    <label>ECR (Efficiency)</label>
                </value>
                <value>
                    <fullName>SAP_5</fullName>
                    <label>Terms of Payment (Efficiency)</label>
                </value>
                <value>
                    <fullName>SAP_6</fullName>
                    <label>Cost to avoid return (Efficiency)</label>
                </value>
                <value>
                    <fullName>SAP_7</fullName>
                    <label>Folders/Adds (BMC)</label>
                </value>
                <value>
                    <fullName>SAP_8</fullName>
                    <label>Placement (BMC)</label>
                </value>
                <value>
                    <fullName>SAP_9</fullName>
                    <default>true</default>
                    <label>Year-end Rebate (BDF I)</label>
                </value>
                <value>
                    <fullName>SAP_10</fullName>
                    <label>Euro Bonus (BDF I)</label>
                </value>
                <value>
                    <fullName>SAP_11</fullName>
                    <label>Headquarters (BDF I)</label>
                </value>
                <value>
                    <fullName>SAP_12</fullName>
                    <label>Growth Bonus (BDF I)</label>
                </value>
                <value>
                    <fullName>SAP_14</fullName>
                    <label>Stores (BDF II)</label>
                </value>
                <value>
                    <fullName>SAP_15</fullName>
                    <label>Special Occasions (BDF II)</label>
                </value>
                <value>
                    <fullName>SAP_16</fullName>
                    <label>Merchandising (BDF II)</label>
                </value>
                <value>
                    <fullName>SAP_17</fullName>
                    <label>Assortment (BDF II)</label>
                </value>
                <value>
                    <fullName>SAP_18</fullName>
                    <label>Redistribution (BDF II)</label>
                </value>
                <value>
                    <fullName>SAP_19</fullName>
                    <label>Once off price equalization (Bonuses)</label>
                </value>
                <value>
                    <fullName>SAP_20</fullName>
                    <label>Once off listing fees (Bonuses)</label>
                </value>
                <value>
                    <fullName>SAP_21</fullName>
                    <label>Recurring Listing Fees</label>
                </value>
                <value>
                    <fullName>SAP_22</fullName>
                    <label>Price off Coupons (TPR)</label>
                </value>
                <value>
                    <fullName>SAP_23</fullName>
                    <label>Loyalty Cards (TPR)</label>
                </value>
                <value>
                    <fullName>SAP_24</fullName>
                    <label>Penalties - Logistics (Efficiency)</label>
                </value>
                <value>
                    <fullName>SAP_25</fullName>
                    <label>Penalties - ECR (Efficiency)</label>
                </value>
                <value>
                    <fullName>SAP_26</fullName>
                    <label>Penalties - Terms of Payment (Efficiency)</label>
                </value>
                <value>
                    <fullName>SAP_27</fullName>
                    <label>Penalties - Cost to avoid return (Efficiency)</label>
                </value>
                <value>
                    <fullName>SAP_28</fullName>
                    <label>Others Trade Promotion (below NSV - Not in TAS)</label>
                </value>
                <value>
                    <fullName>SAP_29</fullName>
                    <label>Consumer Advertising via Trade (BMC - Not in TAS)</label>
                </value>
                <value>
                    <fullName>SAP_30</fullName>
                    <label>Commission Sales Force</label>
                </value>
                <value>
                    <fullName>SAP_31</fullName>
                    <label>Commission Services</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Customer_Concept__c</fullName>
        <description>A free form text field on the incentive header record. It contains the customer understandable narrative of the concept.</description>
        <label>Customer Concept</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FixedAmountAccrual__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates to TAS that the rebate is a fixed
amount deal. Rebates using sellout data as input is always
a fixed amount deal.</description>
        <label>Fixed Amount Accrual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Fixed_Amount__c</fullName>
        <label>Fixed Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_ManualRebateCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Rebate Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Payout_Method__c</fullName>
        <description>How the calculated rebate amount should be paid out to customer.</description>
        <label>Payout Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_01</fullName>
                    <default>true</default>
                    <label>Credit Note</label>
                </value>
                <value>
                    <fullName>SAP_02</fullName>
                    <label>Vendor Invoice</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_SelloutDataProvidedBy__c</fullName>
        <label>Sellout Data Provided By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Trade Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Sent_To_TAS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate whether the invoice details are sent to TAS.</description>
        <label>Sent To TAS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Volume_Per_Machine__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate whether the volumes specified on
the rebate definition is total volume for the
customer or average volume per machine.</description>
        <label>Volume Per Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PayoutFrequency__c</fullName>
        <description>The incentive payout frequency</description>
        <inlineHelpText>The incentive payout frequency</inlineHelpText>
        <label>Payout Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                    <default>true</default>
                    <label>Yearly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountScopeOper__c</fullName>
        <description>The account scope operator</description>
        <inlineHelpText>The account scope operator</inlineHelpText>
        <label>Account Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountScope__c</fullName>
        <description>One or more accounts associated with the incentive</description>
        <inlineHelpText>One or more accounts associated with the incentive</inlineHelpText>
        <label>Account Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountTypeScopeOper__c</fullName>
        <description>The account type scope operator</description>
        <inlineHelpText>The account type scope operator</inlineHelpText>
        <label>Account Type Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountTypeScope__c</fullName>
        <description>One or more account types associated with the incentive</description>
        <inlineHelpText>One or more account types associated with the incentive</inlineHelpText>
        <label>Account Type Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the incentive is active</description>
        <inlineHelpText>Indicates whether the incentive is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AmendmentEffectiveDate__c</fullName>
        <description>The date when the amendment to the incentive takes effect</description>
        <inlineHelpText>The date when the amendment to the incentive takes effect</inlineHelpText>
        <label>Amendment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AncestorId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ancestor incentive</description>
        <inlineHelpText>ID of the ancestor incentive</inlineHelpText>
        <label>Ancestor</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Incentives (Derived)</relationshipLabel>
        <relationshipName>DerivedIncentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ApplicationMethod__c</fullName>
        <description>The incentive application method, depends on the application type.</description>
        <inlineHelpText>The incentive application method, depends on the application type.</inlineHelpText>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buy X Get X</fullName>
                    <default>true</default>
                    <label>Buy X Get X</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoApply__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the incentive would be automatically applied during pricing</description>
        <inlineHelpText>Indicates whether the incentive would be automatically applied during pricing</inlineHelpText>
        <label>Auto Apply ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BenefitUom__c</fullName>
        <description>The benefit unit of measure for the product</description>
        <inlineHelpText>The benefit unit of measure for the product</inlineHelpText>
        <label>Benefit Uom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <default>true</default>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_DRKS</fullName>
                    <label>Drinks</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>SAP_CS</fullName>
                    <isActive>false</isActive>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>Day</fullName>
                    <isActive>false</isActive>
                    <label>Day</label>
                </value>
                <value>
                    <fullName>SAP_EA</fullName>
                    <isActive>false</isActive>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                    <isActive>false</isActive>
                    <label>Gallon</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <isActive>false</isActive>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                    <isActive>false</isActive>
                    <label>Hour</label>
                </value>
                <value>
                    <fullName>Month</fullName>
                    <isActive>false</isActive>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <isActive>false</isActive>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                    <isActive>false</isActive>
                    <label>Quarter</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <isActive>false</isActive>
                    <label>SAP_LY</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <isActive>false</isActive>
                    <label>SAP_LZ</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <isActive>false</isActive>
                    <label>SAP_PY1</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <isActive>false</isActive>
                    <label>SAP_PY2</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <isActive>false</isActive>
                    <label>SAP_ZQH</label>
                </value>
                <value>
                    <fullName>Year</fullName>
                    <isActive>false</isActive>
                    <label>Year</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CombineWithOtherIncentives__c</fullName>
        <description>Indicates whether the incentive can be combined with others</description>
        <formula>IF(Apttus_Config2__StopProcessingMoreIncentives__c, &quot;No&quot; , &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combine With Other Promotion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextType__c</fullName>
        <description>The type of context associated with the incentive</description>
        <inlineHelpText>The type of context associated with the incentive</inlineHelpText>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__UseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>External Order Summary Item</fullName>
                </value>
                <value>
                    <fullName>Line Item</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Summary Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryScopeOper__c</fullName>
        <description>The country scope operator</description>
        <inlineHelpText>The country scope operator</inlineHelpText>
        <label>Country Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryScope__c</fullName>
        <description>One or more countries associated with the incentive</description>
        <inlineHelpText>One or more countries associated with the incentive</inlineHelpText>
        <label>Country Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomDisplaySetting__c</fullName>
        <description>The the name of the custom display setting associated with the incentive. This will be used when an existing incentive record is “Edited”. 
For a new record, the name will be passed as a URL parameter.</description>
        <inlineHelpText>The the name of the custom display setting associated with the incentive. This will be used when an existing incentive record is “Edited”. 
For a new record, the name will be passed as a URL parameter.</inlineHelpText>
        <label>Custom Display Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CycleEndDate__c</fullName>
        <description>The cycle end date. Indicates the end of a loyalty program cycle</description>
        <inlineHelpText>The cycle end date. Indicates the end of a loyalty program cycle</inlineHelpText>
        <label>Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CycleStartDate__c</fullName>
        <description>The cycle start date. Indicates the start of a loyalty program cycle.</description>
        <inlineHelpText>The cycle start date. Indicates the start of a loyalty program cycle.</inlineHelpText>
        <label>Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The incentive description</description>
        <inlineHelpText>The incentive description</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Downgrade__c</fullName>
        <label>Downgrade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>During Program</fullName>
                </value>
                <value>
                    <fullName>Next Program</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <defaultValue>DATE(2000,01,01)</defaultValue>
        <description>The incentive effective date. The incentive becomes effective on this date.</description>
        <inlineHelpText>The incentive effective date. The incentive becomes effective on this date.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableBenefitEffectivityDates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether effective dates are enabled for benefits associated with the incentive</description>
        <inlineHelpText>Indicates whether effective dates are enabled for benefits associated with the incentive</inlineHelpText>
        <label>Enable Benefit Effectivity Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExcludeChildrenWithActivePrograms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether orders from child accounts with activate rebate agreements should excluded from rebate processing. Only applicable when including orders from account hierarchy.</description>
        <inlineHelpText>Indicates whether orders from child accounts with activate rebate agreements should excluded from rebate processing. Only applicable when including orders from account hierarchy.</inlineHelpText>
        <label>Exclude Children With Active Programs ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>The incentive expiration date. The incentive becomes ineffective after this date.</description>
        <inlineHelpText>The incentive expiration date. The incentive becomes ineffective after this date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive group</description>
        <inlineHelpText>ID of the associated incentive group</inlineHelpText>
        <label>Incentive Group</label>
        <referenceTo>Apttus_Config2__IncentiveGroup__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveNumberAuto__c</fullName>
        <description>The system assigned unique incentive number. FOR INTERNAL USE ONLY. DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
        <displayFormat>ICT-{000000}</displayFormat>
        <inlineHelpText>The system assigned unique incentive number. FOR INTERNAL USE ONLY. DO NOT SHOW IN SCREENS, REPORTS, ETC.</inlineHelpText>
        <label>Incentive Number Auto (INTERNAL)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveNumberText__c</fullName>
        <description>FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <inlineHelpText>FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</inlineHelpText>
        <label>Incentive Number Text  (INTERNAL)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveNumber__c</fullName>
        <description>Identifies the incentive number, including the version number. Use this field to display on screens, reports, dashboards, search filters and columns, etc. The other incentive number fields are for internal use only.</description>
        <formula>Apttus_Config2__IncentiveNumberText__c &amp; &quot;.&quot; &amp; TEXT(CEILING(Apttus_Config2__VersionNumber__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the incentive number, including the version number.</inlineHelpText>
        <label>Incentive Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeOrdersForAccountHierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether orders for the account hierarchy should be included for rebate processing</description>
        <inlineHelpText>Indicates whether orders for the account hierarchy should be included for rebate processing</inlineHelpText>
        <label>Include Orders For Account Hierarchy ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to use the ratio field on the price rule.</description>
        <inlineHelpText>Indicates whether to use the ratio field on the price rule.</inlineHelpText>
        <label>Is Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsTaskPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are any tasks pending for the incentive</description>
        <inlineHelpText>Indicates whether there are any tasks pending for the incentive</inlineHelpText>
        <label>Is Task Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the loyalty incentive associated with the point accrual.</description>
        <inlineHelpText>ID of the loyalty incentive associated with the point accrual.</inlineHelpText>
        <label>Loyalty</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Point Accrual Incentives</relationshipLabel>
        <relationshipName>PointAccrualIncentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OriginalEffectiveDate__c</fullName>
        <description>The original effective date associated with the incentive</description>
        <inlineHelpText>The original effective date associated with the incentive</inlineHelpText>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PointAccrualLevel__c</fullName>
        <description>The point accrual level</description>
        <inlineHelpText>The point accrual level</inlineHelpText>
        <label>Point Accrual Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListScopeOper__c</fullName>
        <description>The price list scope operator</description>
        <inlineHelpText>The price list scope operator</inlineHelpText>
        <label>Price List Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListScope__c</fullName>
        <description>One or more price lists associated with the incentive</description>
        <inlineHelpText>One or more price lists associated with the incentive</inlineHelpText>
        <label>Price List Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScopeOper__c</fullName>
        <description>The product family scope operator</description>
        <inlineHelpText>The product family scope operator</inlineHelpText>
        <label>Product Family Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScope__c</fullName>
        <description>One or more product families associated with the incentive</description>
        <inlineHelpText>One or more product families associated with the incentive</inlineHelpText>
        <label>Product Family Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScopeOper__c</fullName>
        <description>The product group scope operator</description>
        <inlineHelpText>The product group scope operator</inlineHelpText>
        <label>Product Group Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScope__c</fullName>
        <description>One or more product groups associated with the incentive</description>
        <inlineHelpText>One or more product groups associated with the incentive</inlineHelpText>
        <label>Product Group Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>